src/objects/A__c.object
<CustomObject>
    <fields>
        <fullName>Acc__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Acc</label>
        <referenceTo>Acc__c</referenceTo>
        <relationshipLabel>A</relationshipLabel>
        <relationshipName>A</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Commit_Date__c</fullName>
        <label>Commit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Con__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Con</label>
        <referenceTo>Con__c</referenceTo>
        <relationshipLabel>A</relationshipLabel>
        <relationshipName>A</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Week__c</fullName>
        <label>Week</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>A</label>
    <nameField>
        <label>A Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>A</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>